Fixed rendering on small devices on the header.css

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -92,9 +92,7 @@ header {
   }
 
   .avatar {
-    vertical-align: auto;
     width: 26.25vh;
     height: 26.25vh;
-    border-radius: 50%;
   }
 }
